# Vector-in-C

./: CMakeLists.txt  README.md  main.c
include/: vector.h
src/: vector.c
